--- a/src/components/admin/AdminSchedule/AdminSchedule.css
+++ b/src/components/admin/AdminSchedule/AdminSchedule.css
@@ -100,10 +100,6 @@
   margin-right: 0.3rem;
 }
 
-.rbc-time-header.rbc-overflowing {
-  margin-right: 0px !important;
-}
-
 /* CSS for Regular Desktops/Small Laptops and Tablets */
 @media only screen and (min-width: 1200px) {
   .admin_schedule_container {
