--- a/src/components/admin/AdminStaff/AdminStaff.css
+++ b/src/components/admin/AdminStaff/AdminStaff.css
@@ -1,6 +1,6 @@
 .add_staff_member_button_container {
   position: absolute;
-  bottom: 15vh;
+  bottom: 10vh;
   left: 0;
   right: 0;
   margin: 0 auto;
